- Upgrade msmtp to 1.4.30.

Bug fixes:

- Set default timezone.
- Fix broken modifications.
- Fix wrong mount check.
- Remove extra space.
- Fix istgt reload operation is failed.
- Remount zfs dataset after modifying canmount.
- Remove unused empty hosts.
- Add LF to motd.
- Fix missing desc and atime field of ZFS settings.
- Load geom before import disks.
- Remove lock before execute now of rsync client/local.
- Fix using same ifield on file chooser.
- Fix unknown state when creating ZFS pool.
- Fix failure to detect installed device.
- Fix wrong encrypted pass phrase with special characters.
- Reflect owner and permission when ZFS config sync.
- Fix error on empty ZFS config.
- Fix gnop is not deleted at ZFS pool destruction.
- Fix broken serial/model output.
- Fix error on empty iSCSI target.
- Fix VLAN is not configured.
- Fix permission of /var/tmp/ftmp.
- Fix AD password that contains a special character is not worked.
- Fix Access AD does not set CIFS Authentication.
- Fix IPv6 auto detection.
- Fix display UTF-8 files on Diagnostics|Information|CIFS/SMB.
- Fix sending UTF-8 mail without encoding.
- Fix WebGUI cannot be accessed.
- Fix access restriction is not changed when creating a dataset.
- Fix labeled disk is showed as wrong method in vdev.
- Remove unused php binary.

Permanent restrictions:
- It is not possible to format a SoftRAID disk with MSDOS FAT16/32.
- It is not possible to encrypt a disk partition, only complete disks are supported.

Known bugs:
- If DHCP for IPv4 is used, the IPv6 statically configured DNS server will be
  overriden by the IPv4 DNS server.

NEED TESTING:
- IPv6: auto mode
- All services using IPv6 address (NFS, FTP, etc...)
- Netatalk VFS Samba module (automatically enabled when Netatalk starts) crashes
  samba when accessing to share
- Need to write an online-test procedure

Help needed:
- Need help for adding LDAP authentication feature:
  Main services can be easily authenticated using PAM-LDAP, but is harder for Samba.
